--- a/ToDoList/src/App.css
+++ b/ToDoList/src/App.css
@@ -1,76 +1,70 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-  
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-  
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-  } 
-  
-h1{
-    text-align: center;
-    color: #00abe4;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+h1 {
+  text-align: center;
+  color: #00abe4;
 }
 
 .task-list-container {
-    display: flex;
-    width: 40%;
-    height: 100vh;
-    border: 10px solid #00abe4;
-    flex-direction: column;
-    align-items: center;
-    font-size: 20px;
-    border-radius: 80px;
-    margin: auto;
+  display: flex;
+  width: 40%;
+  height: 100vh;
+  border: 10px solid #00abe4;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  border-radius: 80px;
+  margin: auto;
+  padding: 20px;
 }
 
 .task-list-container h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .task-list-container ul {
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 20px;
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 20px;
 }
 
 .task-list-container li {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+  background-color: #f2f2f2;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 button {
-    margin-left: 10px;
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: orange;
-    cursor: pointer;
-    transition: border-color 0.25s;
-  }
-  button:hover {
-    border-color: #646cff;
-  }
-  button:focus,
-  button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
-
-.task-list-container form {
-    display: flex;
-    justify-content: center;
-    width: 450px;
+  margin-left: 10px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: orange;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 
-.task-list-container input[type="text"] {
-    margin-right: 10px;
+button:hover {
+  border-color: #646cff;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
