--- a/ToDoList/src/App.css
+++ b/ToDoList/src/App.css
@@ -17,38 +17,39 @@ h1 {
   color: #00abe4;
 }
 
-.task-list-container {
+.container {
   display: flex;
-  width: 40%;
-  height: 100vh;
-  border: 10px solid #00abe4;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  font-size: 20px;
-  border-radius: 80px;
+  height: 100vh;
+  flex-direction: column;
+}
+
+table {
+  width: 80%;
+  border-collapse: collapse;
   margin: auto;
-  padding: 20px;
 }
 
-.task-list-container h2 {
-  text-align: center;
+th,
+td {
+  border: 1px solid #00abe4;
+  padding: 8px;
+  text-align: left;
 }
 
-.task-list-container ul {
-  list-style-type: none;
-  padding: 0;
-  margin-bottom: 20px;
+th {
+  background-color: #00abe4;
+  color: white;
+  border: 1px solid #fff;
 }
 
-.task-list-container li {
-  margin-bottom: 10px;
-  background-color: #f2f2f2;
-  padding: 10px;
-  border-radius: 8px;
+.button-group {
+  display: flex;
+  gap: 5px;
 }
 
 button {
-  margin-left: 10px;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
