--- a/ToDoList/src/App.css
+++ b/ToDoList/src/App.css
@@ -69,3 +69,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.completed {
+  text-decoration: line-through;
+}
